--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="skill">HTML5</div>
             <div class="skill">CSS</div>
             <div class="skill">JavaScript</div>
-            <div class="skill">Responsive Design</div>
+            <div class="skill">React</div>
         </div>
     </section>
 
